--- a/src/pages/ResumeList/ResumeList.module.css
+++ b/src/pages/ResumeList/ResumeList.module.css
@@ -63,6 +63,7 @@ h2.title {
     margin-bottom: 20px; /* 하단 여백 */
     width: 730px;
     align-items: center;
+    border: 2px solid rgb(162, 195, 255); /* 테두리 추가 */
 }
 
 .label {
@@ -138,6 +139,7 @@ h2.title {
     border-radius: 10px;
     width: 750px;
     padding: 10px;
+    border: 2px solid rgb(162, 195, 255); /* 테두리 추가 */
 }
 
 .resumeTable {
@@ -195,7 +197,7 @@ h2.title {
     color: rgba(129, 172, 255, 1);
     background-color: transparent;
     border: 2px solid rgba(129, 172, 255, 1);
-    border-radius: 10px;
+    border-radius: 12px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
