--- a/src/pages/ResumeList/ResumeList.module.css
+++ b/src/pages/ResumeList/ResumeList.module.css
@@ -57,7 +57,7 @@ h2.title {
 
 
 .inputContainer {
-    background-color: #edf3fd;
+    background-color: #486da4;
     border-radius: 10px; /* 둥근 모서리 */
     padding: 20px; /* 내부 여백 */
     margin-bottom: 20px; /* 하단 여백 */
@@ -135,9 +135,9 @@ h2.title {
 }
 
 .resumeListsContainer {
-    background-color: #edf3fd;
+    background-color: #486da4;
     border-radius: 10px;
-    width: 750px;
+    width: 40vw;
     padding: 10px;
     border: 2px solid rgb(162, 195, 255); /* 테두리 추가 */
 }
@@ -157,10 +157,11 @@ h2.title {
 .resumeTable td {
     padding: 15px;
     background-color: white;
-    height: 50px;
+    height: 60px;
 }
 
 .resumeTitle {
+    margin-top: 4px;
     font-size: 1.5rem;
     color: rgba(0, 30, 89, 1);
     text-align: left; /* 왼쪽 정렬 */
@@ -170,9 +171,10 @@ h2.title {
 }
 
 .resumeDate {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     color: gray;
     text-align: left; /* 왼쪽 정렬 */
+    margin-top: 4px;
 }
 
 .resumeActions {
@@ -186,24 +188,25 @@ h2.title {
 
 .noResumes {
     text-align: center;
-    color: gray;
-    font-size: 1rem;
+    color: white;
+    font-size: 18px;
     margin-top: 20px;
 }
 
 .resumeActions button {
     font-size: 1rem;
-    padding: 0.5rem;
-    color: rgba(129, 172, 255, 1);
+    padding: 0.3rem;
+    color: #486da4;
     background-color: transparent;
-    border: 2px solid rgba(129, 172, 255, 1);
-    border-radius: 12px;
+    border: 3px solid #486da4;
+    border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-weight: bold;
 }
 
 .resumeActions button:hover {
-    background-color: rgba(129, 172, 255, 1); /* 마우스 오버 시 배경색 */
+    background-color: #486da4; /* 마우스 오버 시 배경색 */
     color: white;
 }
 
@@ -221,8 +224,9 @@ h2.title {
 }
 
 .pagination li a {
-    text-decoration: none;
+    font-weight: bold;
     color: rgba(0, 30, 89, 1);
+    font-size: 18px;
 }
 
 .pagination li a:hover {
