commit for deployment-22

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ body {
 }
 
 .rightPanel {
-  background-color: white;
+  background-color: #eef0f3;
   width: 70%;
   height: 100%;
   display: flex;
@@ -46,9 +46,10 @@ body {
 }
 
 .App-logo {
-  width: 50vw;
+  width: 60vw;
   margin: 0;
   animation: float 3s ease-in-out infinite; /* 위아래로 살짝 이동하는 애니메이션 추가 */
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); /* 그림자 추가 */
 }
 
 @keyframes float {
@@ -68,7 +69,7 @@ body {
 }
 
 .App-button {
-  width: 200px;
+  width: 10vw;
   padding: 10px;
   margin-top: 20px;
   font-size: 1.5rem;
@@ -79,4 +80,9 @@ body {
   background-color: rgb(72, 109, 164);
   color: white;
   text-align: center;
+  transition: transform 0.2s ease-in-out; /* 애니메이션 추가 */
+}
+
+.App-button:hover {
+  transform: translateY(-5px); /* 위로 5px 이동 */
 }
